<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <com.ft.mapp.widgets.ActionView
        android:id="@+id/setting_action"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:icon_visible="false"
        app:title="@string/buy_tip"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip_feature_1"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/mainTextColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip_feature_2"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/mainTextColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip_feature_3"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/mainTextColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip_feature_4"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/mainTextColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip_feature_5"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/mainTextColor"
        />

</LinearLayout>
