<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <com.ft.mapp.widgets.ActionView
        android:id="@+id/setting_action"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:icon_visible="false"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about"
        />

    <ImageView
        android:id="@+id/about_icon"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@mipmap/icon_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/about_app_verion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_icon" />

    <TextView
        android:id="@+id/about_uuid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_id"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textIsSelectable="true"
        app:layout_constraintTop_toBottomOf="@+id/about_app_verion"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/copyright"
        android:textColor="#2d2d2d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/about_privacy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/service_privacy_policy"
        android:textColor="@color/dot_blue"
        app:layout_constraintBottom_toTopOf="@+id/about_copyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:autoLink="all"
        android:padding="4dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
