<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <com.ft.mapp.widgets.ActionView
        android:id="@+id/setting_action"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:icon_visible="false"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/plugin_no_mark" />

    <View
        android:id="@+id/app_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/desktopColorA"
        app:layout_constraintTop_toBottomOf="@+id/setting_action" />

    <TextView
        android:id="@+id/tik_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/switch_no_mark_download"
        android:textColor="@color/mainTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_detail_layout" />

    <Switch
        android:id="@+id/tik_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="5dp"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/selector_switch_plugin"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/tik_desc_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tik_desc_tv" />

    <TextView
        android:id="@+id/tik_operate_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/tik_operate"
        android:textColor="@color/mainTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/app_detail_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tik_desc_tv" />

    <TextView
        android:id="@+id/tik_operate_desc_tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/tik_operate_tips"
        android:textColor="@color/hintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tik_operate_desc_tv" />



</androidx.constraintlayout.widget.ConstraintLayout>
