<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <com.ft.mapp.widgets.ActionView
        android:id="@+id/feedback_action"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:icon_visible="false"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/help_improve"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/feedback_action">

        <ImageView
            android:id="@+id/feedback_icon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/ic_feedback"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/feedback_title"
            android:textColor="@color/white"
            android:layout_marginTop="23dp"
            android:layout_below="@id/feedback_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/feedback_QQ"
            android:textColor="@color/white"
            android:layout_marginTop="23dp"
            android:layout_below="@id/feedback_title"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
